# advent-of-code

./: .editorconfig  Cargo.toml  README.md  justfile  next-day.py
2023/: Cargo.toml
2023/day15/: Cargo.toml
2025/: Cargo.toml
2025/day01/src/: lib.rs  part1.rs  part2.rs
2025/day02/src/: lib.rs  part1.rs  part2.rs
2025/day03/: Cargo.toml
2025/day03/src/: part1.rs  part2.rs
_template/: Cargo.toml  part1.rs
_template/src/: lib.rs  part1.rs
src/: lib.rs
src/2023/day01/: part1.rs  part2.rs
src/2023/day02/: mod.rs  part1.rs  part2.rs
src/2023/day03/: mod.rs  part1.rs  part2.rs
src/2023/day04/: mod.rs  part1.rs  part2.rs
src/2023/day05/: mod.rs  part1.rs  part2.rs
src/2023/day06/: mod.rs  part1.rs  part2.rs
src/2023/day07/: mod.rs  part1.rs  part2.rs
src/2023/day08/: mod.rs  part1.rs  part2.rs
src/2023/day09/: mod.rs  part1.rs  part2.rs
src/2023/day10/: mod.rs  part1.rs  part2.rs
src/2023/day11/: mod.rs  part1.rs  part2.rs
src/2023/day12/: mod.rs  part1.rs  part2.rs
src/2023/day13/: mod.rs  part1.rs  part2.rs
src/2023/day14/: mod.rs  part1.rs  part2.rs
src/2023/day15/: mod.rs  part1.rs  part2.rs
src/2023/day16/: mod.rs  part1.rs  part2.rs
src/2023/day17/: mod.rs  part1.rs  part2.rs
src/2023/day18/: part1.rs  part2.rs
src/2023/day19/: part1.rs  part2.rs
src/2023/day20/: mod.rs  part1.rs  part2.rs
src/2023/day21/: part1.rs  part2.rs
src/2023/day22/: part1.rs  part2.rs
src/2023/day23/: mod.rs  part1.rs  part2.rs
src/2023/day24/: part1.rs  part2.rs
src/2023/day25/: part1.rs
src/common/: digits.rs  grid.rs  point.rs
(+54 files in other folders)
