[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2024"

[lints.clippy]
# Groups
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# nursery
missing_const_for_fn = "allow" # Noisy
option_if_let_else = "allow" # Less readable

# pedantic
cast_lossless = "allow" # Noisy and verbose
cast_possible_truncation = "allow" # Intentional, but can be mitigated
cast_possible_wrap = "allow" # Used intentionally and extensively
collapsible_if = "allow" # Not always desirable
match_same_arms = "allow" # Intentional for readability
missing_errors_doc = "allow" # Can be addressed by adding documentation
missing_panics_doc = "allow" # Can be addressed by adding documentation
module_name_repetitions = "allow" # Annoying
similar_names = "allow" # Nope
too_many_lines = "allow"
unreadable_literal = "allow" # May not improve readability
unused_self = "allow" # Some opcodes don't need to do anything, but keep them there for now
verbose_bit_mask = "allow" # Less readable

# style
enum_variant_names = "allow" # Annoying
new_without_default = "allow"

[dependencies]
colored = "3.0.0"
itertools = "0.14.0"
num = "0.4.3"
pathfinding = "4.14.0"
regex = "1.12.2"
